# education_project

./: .env.example  .gitignore  Dockerfile  README.md  create.py  create_arch.py  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/v1/: __init__.py
app/api/v1/endpoints/: __init__.py  chat.py  chat_simple.py  decision.py  health.py  users.py
app/api/v1/schemas/: __init__.py  base.py  chat.py
app/application/: app_factory.py  config.py  deps.py  lifespan.py  routes.py
app/application/handlers/: root.py
app/core/: __init__.py  config.py
app/core/chat/: __init__.py  factory.py  service.py
app/core/chat/calculation/: __init__.py  cost.py  tokenizer.py
app/core/chat/prompt/: __init__.py  service.py
app/core/exceptions/: base.py  chat.py  middleware.py
app/core/providers/: __init__.py  base.py  factory.py  gemini_client.py  mock_client.py  ollama_client.py  openai_client.py  registry.py  service.py
app/core/routing/: __init__.py  analyzer.py  engine.py  filters.py  load_manager.py  scorer.py  selector.py  types.py
app/core/validator/: __init__.py  chat.py
app/database/: models.py  session.py
app/database/repositories/: __init__.py  base.py  model_repo.py  provider_repo.py  request_repo.py  response_repo.py  user_repo.py
app/schemas/: __init__.py  base.py  chat.py  health.py  providers.py  requests.py  responses.py  users.py
scripts/: init_db.py  test_db.py
